--- a/src/assets/styles/base/typography.css
+++ b/src/assets/styles/base/typography.css
@@ -117,7 +117,7 @@ h3 {
 }
 
 h4 {
-  font-family: var(--font-medium);
+  font-family: var(--font-montserrat);
   font-weight: var(--weight-medium);
   font-size: 2.25rem;
   line-height: 115%;
@@ -154,6 +154,29 @@ p {
   text-wrap: nowrap;
 }
 
+.btn-add-to-cart {
+  font-family: var(--font-roboto);
+  font-weight: var(--weight-semibold);
+  font-size: 1.375rem;
+  color: var(--text-color);
+}
+
+.btn-change-address {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-semibold);
+  font-size: 0.625rem;
+  color: var(--text-color-dark);
+  opacity: 65%;
+}
+
+.btn-order {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-regular);
+  font-size: 1rem;
+  line-height: 20px;
+  color: var(--text-color);
+}
+
 /* Header */
 
 .header-top-nav-item,
@@ -162,6 +185,9 @@ p {
   font-weight: var(--weight-medium);
   font-size: 1rem;
   color: var(--text-color);
+}
+
+.page-nav-slide a {
   text-wrap: nowrap;
 }
 
@@ -186,7 +212,7 @@ p {
   text-decoration-line: none;
 }
 
-.dish-description {
+.slide-dish-description {
   font-family: var(--font-montserrat);
   font-weight: var(--weight-light);
   color: var(--text-color);
@@ -205,6 +231,52 @@ p {
   font-weight: var(--weight-bold);
   font-size: 2rem;
   color: var(--text-color);
+}
+
+.delivery-address,
+.pickup-address {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-semibold);
+  font-size: 0.875rem;
+  color: #9E9E9E;
+}
+
+.cart-header {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-semibold);
+  font-size: 1.25rem;
+  text-align: center;
+}
+
+.dish-card-name {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-regular);
+  font-size: 0.875rem;
+  text-align: left;
+  color: var(--text-color-gray);
+}
+
+.price-weight {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-regular);
+  font-size: 0.875rem;
+  color: var(--text-color-lightgray);
+}
+
+.price-weight .price,
+.price-weight .currency {
+  font-size: 0.875rem;
+  color: var(--text-color-dark);
+}
+
+.price-weight .weight {
+  font-size: 0.875rem;
+}
+
+.counter-amount {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-regular);
+  font-size: 0.875rem;
 }
 
 /* Reviews */
@@ -249,4 +321,54 @@ p {
   font-weight: var(--weight-light);
   font-size: 1rem;
   color: #757575;
+}
+
+.contacts-item-link:hover,
+.useful-information-item-link:hover {
+  text-decoration-line: underline;
+  text-decoration-thickness: 1px;
+}
+
+/* Dishes menu */
+
+.menu-section-header {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-semibold);
+  font-size: 2.25rem;
+  color: var(--text-color-dark);
+}
+
+.dish-header {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-bold);
+  font-size: 1rem;
+  color: var(--text-color-dark);
+}
+
+.dish-description {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-light);
+  font-size: 11px;
+  color: #757575;
+  line-height: 14px;
+}
+
+.dish-info {
+  text-wrap: nowrap;
+  white-space: nowrap;
+}
+
+.price,
+.currency {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-medium);
+  font-size: 1.125rem;
+  color: var(--text-color-dark);
+}
+
+.weight {
+  font-family: var(--font-montserrat);
+  font-weight: var(--weight-regular);
+  font-size: 0.75rem;
+  color: #919191;
 }
