--- a/src/assets/styles/components/map.css
+++ b/src/assets/styles/components/map.css
@@ -1,6 +1,8 @@
 .map {
-  margin: 0rem 1.5rem;
-  padding: 1.5rem 9.75rem 3.75rem 9.75rem;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1.5rem 1.5rem 3.75rem 1.5rem;
 }
 
 .map-container {
@@ -19,7 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-height: 500px;
+  min-height: 500px;
 }
 
 .map-call-to-action {
