--- a/src/assets/styles/components/header.css
+++ b/src/assets/styles/components/header.css
@@ -1,6 +1,5 @@
 .header {
-  margin: 0 0.5rem 0.5rem;
-  padding: 1.875rem 11.25rem 0rem 11.25rem ;
+  padding: 1.875rem 0 0 0 ;
 }
 
 .header-container {
@@ -14,7 +13,11 @@
   justify-content: flex-start;
   align-items: center;
 
-  padding-bottom: 1.875rem;
+  max-width: 1440px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 1.5rem 1.875rem 1.5rem;
 }
 
 .header-top-logo {
