fix(styles): add padding for scroll anchors

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -13,6 +13,7 @@
 html {
   scrollbar-gutter: stable;
   scroll-behavior: smooth;
+  scroll-padding-top: 100px;
   -webkit-tap-highlight-color: transparent;
 }
 
