--- a/src/assets/styles/components/modals.css
+++ b/src/assets/styles/components/modals.css
@@ -10,7 +10,7 @@
   width: 100%;
   height: 100%;
 
-  z-index: 4;
+  z-index: 7;
 }
 
 .modal.fade-in {
@@ -41,6 +41,9 @@
 
 .modal-container {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   top: 50%;
   left: 50%;
 
@@ -53,10 +56,6 @@
 
   animation: slideIn 0.5s;
   transform: translate(-50%, -50%);
-}
-
-.modal-container:has(.calculator-form) {
-  max-width: 847px;
 }
 
 @keyframes slideIn {
@@ -86,7 +85,7 @@
 }
 
 .modal-container h4 {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .close-icon {
@@ -101,135 +100,171 @@
   cursor: pointer;
 }
 
-.reply-form {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
+/* Cart */
 
-  margin-bottom: 2rem;
-}
+.cart {
+  position: fixed;
+  top: 169px;
 
-.modal-container > .calculator-form {
-  margin-bottom: 2rem;
-}
+  background-color: #FFFFFF;
 
-.modal-container .personal-data-processing {
-  max-width: 400px;
-}
-
-/* Choose city modal */
-
-.modal-container.choose-city-modal {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  row-gap: 2rem;
-
-  max-width: 289px;
+  max-width: 365px;
   width: 100%;
-  padding: 2rem 1rem 2rem 1rem;
+  padding: 1rem;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+
+  box-shadow: 0 -6px 36px 6px rgba(0, 0, 0, 0.05);
+  z-index: 4;
+  transition: bottom 0.3s ease, top 0.3s ease, position 0.3s ease;
 }
 
-.modal-container.choose-city-modal h4 {
-  max-width: 230px;
-  width: 100%;
-  margin-bottom: 0;
+.cart.sticky {
+  position: fixed;
+  top: 169px;
+
+  transition: bottom 0.3s ease;
 }
 
-.modal-container.choose-city-modal .close-icon {
-  top: 2rem;
-  right: 1rem;
+.cart.stop {
+  position: absolute;
+  top: auto;
+
+  transition: bottom 0.3s ease;
 }
 
-.city-list {
+.cart-container {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
+
+  max-width: 365px;
+  min-height: 500px;
 }
 
-.check-mark-color {
-  transition: stroke 0.3s ease-out;
+.cart-container-delivery,
+.cart-container-pickup {
+  display: none;
+
+  opacity: 0;
+  visibility: hidden;
+  transition: display 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
 }
 
-/* Order modal */
-
-.modal-order-wrapper {
+.cart-container-delivery.active,
+.cart-container-pickup.active {
   display: flex;
+
+  opacity: 1;
+  visibility: visible;
 }
 
-.modal-order .calculator-form {
-  flex-direction: column;
-  flex-wrap: nowrap;
-}
-
-.order-form-wrapper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  row-gap: 0.5rem;
-}
-
-.order-inputs {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  row-gap: 0.5rem;
-}
-
-.order-form-wrapper .transport-card {
-  cursor: default;
-}
-
-.order-form-wrapper .transport-card .transport-card-goods > * {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  max-height: 1.5rem;
-}
-
-/* Success modal */
-
-.modal-success-reply {
-  max-width: 668px;
-}
-
-.modal-success-container {
-  display: flex;
+.cart-container-delivery,
+.cart-container-pickup {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  row-gap: 0.625rem;
 }
 
-@media (max-height: 667px) {
-  .modal-container.choose-city-modal {
-    top: 63%;
-    right: 50%;
-  }
+.cart-dishes {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  row-gap: 1rem;
+  overflow-y: auto;
 
-  .modal-container.modal-order {
-    top: 63%;
-    right: 50%;
-  }
+  max-height: 283px;
+  height: 100%;
+  padding-right: 0.5rem;
+
+  scrollbar-width: thin;
 }
 
-@media (max-width: 900px) {
-  .modal-container:has(.calculator-form) {
-    max-width: 720px;
-  }
+.cart-dish-card {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: stretch;
+  column-gap: 1rem;
+}
+
+.dish-card-img {
+  max-width: 82px;
+  width: 100%;
+  border-radius: 6px;
+  object-fit: contain;
+}
+
+.dish-card-wrapper {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  row-gap: 0.675rem;
+}
+
+.dish-card-name {
+  display: flex;
+  flex-grow: 1;
+  align-items: flex-start;
+
+  max-width: 212px;
+}
+
+.cart-dish-info {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-grow: 1;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.amount-counter {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1.125rem;
+
+  max-height: 29px;
+  padding: 6px 9px;
+  border: 1px solid #D4D4D4;
+  border-radius: 4px;
+}
+
+.amount-counter > * {
+  background-color: transparent;
+}
+
+/* Choose address form */
+
+.form-wrapper {
+  align-self: center;
+
+  max-width: 448px;
+  margin-top: 15px;
+}
+
+.pickup-form,
+.delivery-form {
+  display: none;
+
+  opacity: 0;
+  visibility: hidden;
+  transition: display 0.3s ease, opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.pickup-form.active,
+.delivery-form.active {
+  display: block;
+
+  opacity: 1;
+  visibility: visible;
 }
 
 @media (max-width: 768px) {
   .modal-container {
     max-width: 580px;
-  }
-
-  .modal-container:has(.calculator-form) {
-    max-width: 580px;
-  }
-
-  .order-form-wrapper .transport-card {
-    display: none;
   }
 }
 
@@ -238,13 +273,8 @@
     max-width: 400px;
   }
 
-  .modal-container h4,
-  .modal-container:has(.calculator-form) h4 {
+  .modal-container h4 {
     max-width: 250px;
-  }
-
-  .modal-container:has(.calculator-form) {
-    max-width: 400px;
   }
 }
 
@@ -254,13 +284,8 @@
     padding: 2rem 1rem 2rem 1rem;
   }
 
-  .modal-container h4,
-  .modal-container:has(.calculator-form) h4 {
+  .modal-container h4 {
     max-width: 233px;
-  }
-
-  .modal-container:has(.calculator-form) {
-    max-width: 289px;
   }
 
   .close-icon {
