--- a/src/assets/styles/components/inputs.css
+++ b/src/assets/styles/components/inputs.css
@@ -121,6 +121,12 @@
   justify-content: space-between;
 }
 
+.modal-book-table .form-group-row {
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+}
+
 .form-label {
   font-size: 14px;
   font-weight: normal;
@@ -140,6 +146,12 @@
 .input-wrapper:has(.form-input:focus) {
   outline: none;
   border-color: #4E9F37;
+  box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
+}
+
+.modal-book-table .input-wrapper:has(.form-input:focus) {
+  outline: none;
+  border-color: var(--secondary-color);
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
 }
 
@@ -210,7 +222,8 @@
   left: calc(15px + 5ch);
 }
 
-.input-wrapper:has(.house) .placeholder-star {
+.input-wrapper:has(.house) .placeholder-star,
+.input-wrapper:has(.name) .placeholder-star {
   left: calc(15px + 3.5ch);
 }
 
@@ -220,6 +233,10 @@
 
 .input-wrapper:has(.telephone) .placeholder-star {
   left: calc(15px + 16.5ch); 
+}
+
+.input-wrapper:has(.people-amount) .placeholder-star {
+  left: calc(15px + 15.7ch); 
 }
 
 .form-input:focus::placeholder {
@@ -292,7 +309,7 @@
 }
 
 .select-label.selected {
-  color: #000; /* Цвет текста чёрный */
+  color: #000;
 }
 
 .select-label:focus,
@@ -300,4 +317,81 @@
   border-color: #4E9F37;
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
   outline: none;
+}
+
+/* Custom checkbox */
+
+.radio-group {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.radio-label {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.radio-input {
+  display: none;
+}
+
+.radio-custom {
+  max-width: 20px;
+  max-height: 20px;
+  min-width: 20px;
+  min-height: 20px;
+  border: 1px solid var(--secondary-color);
+  border-radius: 50%;
+  margin-right: 10px;
+  position: relative;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+.radio-input:checked + .radio-custom {
+  background-color: var(--primary-color);
+  border-color: var(--secondary-color);
+}
+
+.radio-input:checked + .radio-custom::after {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: var(--secondary-color);
+}
+
+.radio-label:hover .radio-custom {
+  border-color: var(--secondary-color);
+}
+
+/* Textarea */
+
+.form-textarea {
+  width: 100%;
+  min-height: 120px;
+  padding: 12px 16px;
+  color: #000;
+  border: 1px solid #dcdcdc;
+  border-radius: 8px;
+  resize: none;
+  outline: none;
+  box-shadow: none;
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.form-textarea:focus {
+  border-color: var(--secondary-color);
+  box-shadow: 0 0 5px rgba(126, 53, 53, 0.3);
+}
+
+/* Стили для placeholder */
+.form-textarea::placeholder {
+  font-size: 16px;
+  color: #b1b1b1;
 }
