--- a/src/assets/styles/components/inputs.css
+++ b/src/assets/styles/components/inputs.css
@@ -32,6 +32,10 @@
   overflow: hidden;
 }
 
+.placing-order .button-switch {
+  width: 395px;
+}
+
 .checkbox {
   position: relative;
   width: 100%;
@@ -60,6 +64,22 @@
   position: absolute;
   top: 3px;
   width: 149px;
+  height: 33px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 1;
+  padding: 10px 27px;
+  border-radius: 10px 0 0 10px;
+  transition: 0.3s ease all;
+}
+
+.placing-order .button-switch .knobs:before,
+.placing-order .button-switch .knobs:after,
+.placing-order .button-switch .knobs span {
+  position: absolute;
+  top: 3px;
+  width: 193px;
   height: 33px;
   font-size: 14px;
   font-weight: bold;
@@ -100,6 +120,13 @@
   color: #909294;
 }
 
+.placing-order .button-switch .checkbox:checked + .knobs:before {
+  left: 196px;
+  background-color: #FFFFFF;
+  border-radius: 0 10px 10px 0;
+  color: #909294;
+}
+
 .button-switch .checkbox:checked + .knobs:after {
   color: #909294;
   z-index: 1;
@@ -121,7 +148,8 @@
   justify-content: space-between;
 }
 
-.modal-book-table .form-group-row {
+.modal-book-table .form-group-row,
+.choose-time .form-group-row {
   flex-direction: row;
   justify-content: center;
   gap: 1rem;
@@ -149,7 +177,8 @@
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
 }
 
-.modal-book-table .input-wrapper:has(.form-input:focus) {
+.modal-book-table .input-wrapper:has(.form-input:focus),
+.placing-order .input-wrapper:has(.form-input:focus) {
   outline: none;
   border-color: var(--secondary-color);
   box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
